--- a/advenced.html
+++ b/advenced.html
@@ -7,37 +7,38 @@
     <body>
         <div id="navsection-adv">
             <div id="navbar">
-                    <div id="topnavbar-adv">
-                        <div id="logo-adv">
-                            <img class="navbar-pic-adv" src="index.png" alt="adv-googlelogo">
-                        </div>
-                            <img class="navbar-pic" src="account.png" alt="accountpfp">
-                            <a class="navbar-button" href="">Advanced</a>
-                            <a class="navbar-button" href="">Images</a>
-                        </div>
-                    </div>
+                <div id="navbar-section">
+                    <a class="navbar-button" href="image.html">Images</a>
+                    <img class="navbar-pic" src="account.png" alt="accountpfp">
+                </div>
+                <div id="logo-adv">
+                    <a href="index.html"><img class="navbar-pic-adv" src="index.png" alt="adv-googlelogo"></a>
+                </div>
             </div>
+            <h2 id="titlepage-adv">Advanced Search</h2>
         </div>
-        <div id="search-body">
+        <div id="search-body-adv">
             <div id="searchbar-box">
                     <div id="fields-adv">
-                        <div>
-                            <span>Find page with...</span>
+                        <div id="titlessearch-adv">
+                            <span id="titlesearch-adv">Find pages with...</span>
+                            <span id="titlesearch-detail-adv">To do this in the search box.
+                            </span>
                         </div>
                         <div>
-                            <span>all these words:</span>
+                            <span class="field-label-adv">all these words:</span>
                             <input class="field-adv" type="text" value="">
                         </div>
                         <div>
-                            <span>this exact word or phrase:</span>
+                            <span class="field-label-adv">this exact word or phrase:</span>
                             <input class="field-adv" type="text" value="">
                         </div>
                         <div>
-                            <span>any of these words:</span>
+                            <span class="field-label-adv">any of these words:</span>
                             <input class="field-adv" type="text" value="">
                         </div>
                         <div>
-                            <span>none of these words:</span>
+                            <span class="field-label-adv">none of these words:</span>
                             <input class="field-adv" type="text" value="">
                         </div>
                     </div>
