--- a/advenced.html
+++ b/advenced.html
@@ -3,6 +3,8 @@
     <head>
         <title>Google</title>
         <link rel="stylesheet" href="styles.css">
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
+
     </head>
     <body>
         <div id="navsection-adv">
@@ -25,21 +27,53 @@
                             <span id="titlesearch-detail-adv">To do this in the search box.
                             </span>
                         </div>
-                        <div>
-                            <span class="field-label-adv">all these words:</span>
-                            <input class="field-adv" type="text" value="">
-                        </div>
-                        <div>
-                            <span class="field-label-adv">this exact word or phrase:</span>
-                            <input class="field-adv" type="text" value="">
-                        </div>
-                        <div>
-                            <span class="field-label-adv">any of these words:</span>
-                            <input class="field-adv" type="text" value="">
-                        </div>
-                        <div>
-                            <span class="field-label-adv">none of these words:</span>
-                            <input class="field-adv" type="text" value="">
+                        <div id="searchsection-adv">
+                            <div>
+                                <div class="field-div-adv">
+                                    <div class="fieldlabel-div-adv">
+                                        <span class="field-label-adv">all these words:</span>
+                                    </div>
+                                    <div class="field-div-adv">
+                                        <input class="field-adv" type="text" value="">
+                                    </div>
+                                    <div>
+                                        <span>Type the important words: tri-colour rat terrier</span>
+                                    </div>
+                                </div>
+                                <div class="field-div-adv">
+                                    <div class="fieldlabel-div-adv">
+                                        <span class="field-label-adv">this exact word or phrase:</span>
+                                    </div>
+                                    <div class="field-div-adv">
+                                        <input class="field-adv" type="text" value="">
+                                    </div>
+                                    <div>
+                                        <span>Put exact words in quotes: "rat terrier"</span>
+                                    </div>
+                                </div>
+                                <div class="field-div-adv">
+                                    <div class="fieldlabel-div-adv">
+                                        <span class="field-label-adv">any of these words:</span>
+                                    </div>
+                                    <div class="field-div-adv">
+                                        <input class="field-adv" type="text" value="">
+                                    </div>
+                                    <div>
+                                        <span>Type OR between all the words you want: miniature OR standard</span>
+                                    </div>
+                                </div>
+                                <div class="field-div-adv">
+                                    <div class="fieldlabel-div-adv">
+                                        <span class="field-label-adv">none of these words:</span>
+                                    </div>
+                                    <div class="field-div-adv">
+                                        <input class="field-adv" type="text" value="">
+                                    </div>
+                                    <div>
+                                        <span>Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </form>
