--- a/advenced.html
+++ b/advenced.html
@@ -28,52 +28,55 @@
                         </div>
                         <form id="searchsection-adv" action="https://google.com/search" name="f">
                             <div>
-                                <div class="field-div-adv">
+                                <div class="fieldbox-div-adv">
                                     <div class="fieldlabel-div-adv">
                                         <span class="field-label-adv">all these words:</span>
                                     </div>
                                     <div class="field-div-adv">
                                         <input class="field-adv" type="text" value="" name="as_q">
                                     </div>
-                                    <div>
-                                        <span>Type the important words: tri-colour rat terrier</span>
+                                    <div class="fielddescription-div-adv">
+                                        <span class="fielddescription-adv">Type the important words:</span> <span class="fielddescription-adv-exp">rat terrier</span> 
                                     </div>
                                 </div>
-                                <div class="field-div-adv">
+                                <div class="fieldbox-div-adv">
                                     <div class="fieldlabel-div-adv">
                                         <span class="field-label-adv">this exact word or phrase:</span>
                                     </div>
                                     <div class="field-div-adv">
                                         <input class="field-adv" type="text" value="" name="as_epq">
                                     </div>
-                                    <div>
-                                        <span>Put exact words in quotes: "rat terrier"</span>
+                                    <div class="fielddescription-div-adv">
+                                        <span class="fielddescription-adv">Put exact words in quotes: </span> <span class="fielddescription-adv-exp">"rat terrier"</span> 
                                     </div>
                                 </div>
-                                <div class="field-div-adv">
+                                <div class="fieldbox-div-adv">
                                     <div class="fieldlabel-div-adv">
                                         <span class="field-label-adv">any of these words:</span>
                                     </div>
                                     <div class="field-div-adv">
                                         <input class="field-adv" type="text" value="" name="as_oq">
                                     </div>
-                                    <div>
-                                        <span>Type OR between all the words you want: miniature OR standard</span>
+                                    <div class="fielddescription-div-adv">
+                                        <span class="fielddescription-adv">Type <span class="fielddescription-adv-exp">OR</span> between all the words you want: </span> <span class="fielddescription-adv-exp">miniature OR standard</span>
                                     </div>
                                 </div>
-                                <div class="field-div-adv">
+                                <div class="fieldbox-div-adv">
                                     <div class="fieldlabel-div-adv">
                                         <span class="field-label-adv">none of these words:</span>
                                     </div>
                                     <div class="field-div-adv">
                                         <input class="field-adv" type="text" value="" name="as_eq">
                                     </div>
-                                    <div>
-                                        <span>Put a minus sign just before words that you don't want: -rodent, -"Jack Russell"</span>
+                                    <div class="fielddescription-div-adv">
+                                        <span class="fielddescription-adv">Put a minus sign just before words that you don't want: </span> <span class="fielddescription-adv-exp">-rodent, -"Jack Russell"</span> 
                                     </div>
                                 </div>
-                                <div>
-                                    <input type="submit" value="Advanced Search">
+                                <div class="fieldbox-div-adv">
+                                    <div class="fieldlabel-div-adv"></div>
+                                    <div class="field-div-adv">
+                                        <input class="submit-adv" type="submit" value="Advanced Search">
+                                    </div>
                                 </div>
                             </div>
                         </form>
