--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                         <!-- <img class="clear-icon" src="greycross.png" /> -->
                     </div>
                     <div id="buttons">
-                        <input class="search-button" type="submit" value="Google Search">
-                        <input class="search-button" type="submit" value="I am feeling lucky">
+                        <input class="search-button" name="btnK" type="submit" value="Google Search">
+                        <input class="search-button" name="btnI" type="submit" value="I am feeling lucky">
                     </div>
                 </form>
             </div>
